@@ -1,4 +1,4 @@
-/* $OpenBSD: sftp-glob.c,v 1.25 2013/11/08 00:39:15 djm Exp $ */
+/* $OpenBSD: sftp-glob.c,v 1.26 2013/11/08 11:15:19 dtucker Exp $ */
 /*
  * Copyright (c) 2001-2004 Damien Miller <djm@openbsd.org>
  *
@@ -23,6 +23,7 @@
 #endif
 
 #include <dirent.h>
+#include <stdlib.h>
 #include <string.h>
 
 #include "xmalloc.h"
